--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -33,6 +33,12 @@
     --ring: 215 20.2% 65.1%;
 
     --radius: 0.5rem;
+
+    --s: 280px;
+
+    --d: 15s;
+
+    --n: 9;
   }
 
   .dark {
@@ -66,6 +72,9 @@
     --ring: 216 34% 17%;
 
     --radius: 0.5rem;
+
+    --n:9;
+
   }
   ::selection {
     @apply text-black;
@@ -104,4 +113,75 @@
     @apply from-white;
     @apply to-neutral-400;
   }
+}
+
+@layer utilities {
+   /* number of images*/
+
+   .gallery {
+    display: grid;
+    width: var(--s);
+    aspect-ratio: 1;
+    overflow: hidden;
+    padding: calc(var(--s) / 20);
+    border-radius: 50%;
+    position: relative;
+    clip-path: circle(49.5%);
+  }
+  
+  .gallery::after {
+    content: "";
+    position: absolute;
+    inset: 0;
+    padding: inherit;
+    border-radius: inherit;
+    background: repeating-conic-gradient(#789048 0 30deg, #DFBA69 0 60deg);
+    -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+    -webkit-mask-composite: xor;
+    mask-composite: exclude;
+    animation: m var(--d) infinite cubic-bezier(.5, -0.2, .5, 1.2);
+  }
+  
+  /* Shared styles for all images */
+  .gallery > img {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: inherit;
+    animation: m var(--d) infinite cubic-bezier(.5, -0.2, .5, 1.2);
+    transform-origin: 50% 175%;
+  }
+  
+  /* Individual delay for each image (manually written, based on $n = 9) */
+  .gallery > img:nth-child(2)  { animation-delay: calc((1 - 2)/9 * var(--d)); }
+  .gallery > img:nth-child(3)  { animation-delay: calc((1 - 3)/9 * var(--d)); }
+  .gallery > img:nth-child(4)  { animation-delay: calc((1 - 4)/9 * var(--d)); }
+  .gallery > img:nth-child(5)  { animation-delay: calc((1 - 5)/9 * var(--d)); }
+  .gallery > img:nth-child(6)  { animation-delay: calc((1 - 6)/9 * var(--d)); }
+  .gallery > img:nth-child(7)  { animation-delay: calc((1 - 7)/9 * var(--d)); }
+  .gallery > img:nth-child(8)  { animation-delay: calc((1 - 8)/9 * var(--d)); }
+  .gallery > img:nth-child(9)  { animation-delay: calc((1 - 9)/9 * var(--d)); }
+  .gallery > img:nth-child(10) { animation-delay: calc((1 - 10)/9 * var(--d)); }
+  
+  @keyframes m {
+    0%, 3% { transform: rotate(0deg); }
+    9.11%, 14.44% { transform: rotate(-40deg); }
+    20%, 25.33%   { transform: rotate(-80deg); }
+    31.11%, 36.44% { transform: rotate(-120deg); }
+    42.22%, 47.55% { transform: rotate(-160deg); }
+    53.33%, 58.66% { transform: rotate(-200deg); }
+    64.44%, 69.77% { transform: rotate(-240deg); }
+    75.55%, 80.88% { transform: rotate(-280deg); }
+    86.66%, 91.99% { transform: rotate(-320deg); }
+    98%, 100% { transform: rotate(-360deg); }
+  }
+  
+  /* body {
+    margin: 0;
+    min-height: 100vh;
+    display: grid;
+    place-content: center;
+    background: #C2CBCE;
+  } */
 }
